--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+        <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Petit+Formal+Script' rel='stylesheet' type='text/css'>
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,12 +26,42 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="container">
+          <h1>Robert Pyke</h1>
+
+          <div class="cards">
+            <div class="card code">
+                <a href="https://github.com/robertpyke/"><span></span></a>
+                <div class="leading club"></div>
+                <div class="inner_card">
+                  <h2>Code</h2>
+                </div>
+                <div class="lagging club"></div>
+            </div>
+            <div class="card cv">
+                <a href="http://www.linkedin.com/in/robertpyke"><span></span></a>
+                <div class="leading heart"></div>
+                <div class="inner_card">
+                  <h2>CV</h2>
+                </div>
+                <div class="lagging heart"></div>
+            </div>
+            <div class="card blog">
+                <a href="http://robertpyke.blogspot.com.au/"><span></span></a>
+                <div class="leading diamond"></div>
+                <div class="inner_card">
+                  <h2>Blog</h2>
+                </div>
+                <div class="lagging diamond"></div>
+            </div>
+          </div>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
