--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Petit+Formal+Script' rel='stylesheet' type='text/css'>
+
+        <link rel="stylesheet" href="js/reportcard/css/badges.css">
 
     </head>
     <body>
@@ -26,8 +32,8 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="container">
-          <h1>Robert Pyke</h1>
+        <div class="rp_container">
+          <h1 class="title">Robert Pyke</h1>
 
           <div class="cards">
             <div class="card code">
@@ -57,11 +63,20 @@
           </div>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
+        <!--
+        <div class="rp_container treehouse">
+            <div class="treehouse-badges"></div>
+        </div>
+        -->
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
+        <script src="js/vendor/bootstrap.min.js"></script>
+
+        <script src="js/reportcard/js/treehouse.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
